# Simple-Spinning-Wheel

./: README.md  pyproject.toml  spinningwheel.py
src/spinningwheel_NUGGEW/: __init__.py
src/spinningwheel_NUGGEW.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
